# agent-primer

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
run/: macos.sh  windows.cmd  windows.ps1
scripts/: launch-agent-primer.sh
src/agent_primer/: app.py  config.py  context_pack.py  main.py  model_presets.py  models.py  openrouter.py  prompt_compiler.py  prompt_upgrade.py  prompts.py  scanner.py  scoring.py  writer.py
tests/: test_api.py  test_config.py  test_context_pack.py  test_e2e.py  test_models.py  test_openrouter.py  test_prompt_compiler.py  test_prompt_upgrade.py  test_prompts.py  test_readme.py  test_scanner.py  test_scoring.py  test_static_ui.py  test_writer.py
tests/fixtures/bad_context/docs/ai/: constraints.md  context.md  repo-map.md  risks.md  verification.md
tests/fixtures/node_repo/: README.md  package.json
tests/fixtures/node_repo/.github/workflows/: ci.yml
tests/fixtures/node_repo/src/: middleware.ts
tests/fixtures/node_repo/src/lib/: session.ts
tests/fixtures/python_repo/: .env.example  README.md  pyproject.toml
web/: app.js  index.html  styles.css
